[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-program = "1.16.3"

[dev-dependencies]
solana-program-test = "1.16.3"
solana-sdk = "1.16.3"

